--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
     <link rel="icon" href="img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <div class="container mt-5">
-        <div class="card p-4">
+        <div class="card p-4" style="background: #D6DADD">
             <h4>Cadastro de Produtos</h4>
-            <div class="mb-5">
+            <div class="mb-3">
                 <button type="button" style="float:right; font-weight: 500;" onclick="adicionar()" class="btn btn-success btn tooltipd"><i class="fa-solid fa-plus"></i> Adicionar</button>
             </div>
 
-            <div class="card p-3">
-                <table class="table table-responsive-md">
+            <div class="card p-3 table-responsive-md">
+                <table class="table">
                     <thead id="listagem">
                         <tr>
-                            <th scope="col">Código</th>
-                            <th scope="col">Nome do Produto</th>
-                            <th scope="col" class="text-center">Preço</th>
-                            <th scope="col" class="text-center">Categoria</th>
-                            <th scope="col" class="text-center">Funções</th>
+                            <th>Nome</th>
+                            <th class="text-center">Preço</th>
+                            <th class="text-center">Categoria</th>
+                            <th class="text-center">Marca</th>
+                            <th class="text-center">Funções</th>
                         </tr>
                     </thead>
                     <tbody id="listagem_produtos">
@@ -51,10 +49,16 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-12 mb-2">
+                        <div class="col-md-6 mb-2">
                             <div class="form-group">
                                 <label>Nome do Produto <span style="color: red;">*</span></label>
                                 <input type="text" id="nome_produto" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-2">
+                            <div class="form-group">
+                                <label>Marca </label>
+                                <input type="text" id="marca" class="form-control">
                             </div>
                         </div>
                         <div class="col-md-6 mb-2">
