--- a/conversor_moedas.html
+++ b/conversor_moedas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Conversor de Moedas</title>
     <link rel="icon" href="img/codigo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,12 +23,15 @@
                 <button type="button" style=" font-weight: 500;" onclick="window.location.href='editor_texto.html'" class="btn btn-info btn tooltipd"><i class="fa-solid fa-text-height"></i> Editor</button>
             </div>
 
+            <h4>Conversor de Moedas BR</h4>
+
             <div style="text-align: center; padding-top: 30px;">
-                <h5>Bem-Vindo!</h5>
+                <h5>Em Breve...</h5>
             </div>
         </div>
     </div>
-    
+
     <script src="js/script.js" type="text/javascript"></script>
+
 </body>
 </html>
