--- a/controle_produto.html
+++ b/controle_produto.html
@@ -95,6 +95,8 @@
     </div>
 
     <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/inputs_mask.js" type="text/javascript"></script>
+    <script src="js/jquery.maskMoney.js" type="text/javascript"></script>
 
 </body>
 </html>
